# blahrs

./: .gitignore  Cargo.toml  flake.nix  init.sql  rust-toolchain.toml  shell.nix  zbpack.json
.github/workflows/: ci.yaml  doc.yml
blah-types/: Cargo.toml
blah-types/benches/: crypto_ops.rs
blah-types/examples/: openapi.rs
blah-types/src/: crypto.rs  identity.rs  lib.rs  msg.rs  rusqlite_impl.rs  server.rs
blahctl/: Cargo.toml
blahctl/src/: main.rs
blahd/: Cargo.toml  build.rs  config.example.toml  init.sql  schema.sql
blahd/benches/: register-pow.rs
blahd/docs/: index.html  webapi.yaml
blahd/src/: config.rs  database.rs  event.rs  feed.rs  id.rs  lib.rs  main.rs  metric.rs  middleware.rs  register.rs  utils.rs
blahd/src/database/: tests.rs
blahd/tests/: basic.rs  socket_activate.rs  webapi.rs
contrib/: blahd.example.service  blahd.example.socket  module.nix  pre-commit
docs/: webapi.yaml
nix/: module.nix
pages/: index.html  main.js
src/: lib.rs  main.rs  types.rs
test-frontend/: index.html  main.js
