[workspace]
resolver = "2"
members = [
    "blah-types",
    "blahctl",
    "blahd",
]
default-members = ["blahd"]

[workspace.dependencies]
# Need: Generic support, impl bound fix, doc comment fix.
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "70340226ef8c9d5fd540c637b952e961c7a364f2" }

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.bench]
debug = "line-tables-only"
