[workspace]
resolver = "3"
members = [
    "blah-types",
    "blahctl",
    "blahd",
]
default-members = ["blahd"]

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.bench]
debug = "line-tables-only"
