[package]
name = "blah-types"
version = "0.0.0"
edition = "2021"

[features]
default = []
unsafe_use_mock_instant_for_testing = ["dep:mock_instant"]
utoipa = ["dep:utoipa"]

[[example]]
name = "openapi"
required-features = ["utoipa"]

[[bench]]
name = "crypto_ops"
harness = false

[dependencies]
bitflags = "2"
bitflags_serde_shim = "0.2"
ed25519-dalek = "2"
hex = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
mock_instant = { version = "0.5", optional = true }
rand = "0.8"
rusqlite = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
serde_with = "3"
thiserror = "1"
url = { version = "2", features = ["serde"] }
utoipa = { workspace = true, optional = true, features = ["url"] } # Generics support.

[dev-dependencies]
criterion = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
expect-test = "1"
sha2 = "0.10"

[lints]
workspace = true
