[package]
name = "blah-types"
version = "0.0.0"
edition = "2021"

[features]
default = ["ed25519-dalek/default"]
schemars = ["dep:schemars"]
rusqlite = ["dep:rusqlite"]

unsafe_use_mock_instant_for_testing = ["dep:mock_instant"]

[[bench]]
name = "crypto_ops"
harness = false

[dependencies]
bitflags = "2"
ed25519-dalek = { version = "2", default-features = false }
hex = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
thiserror = "2"
url = { version = "2", features = ["serde"] }

[dependencies.rusqlite]
version = "0.33"
optional = true

[dependencies.schemars]
version = "0.8"
optional = true
features = ["url"]

[dependencies.mock_instant]
version = "0.5"
optional = true

[dev-dependencies]
criterion = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
expect-test = "1"
sha2 = "0.10"

[lints]
workspace = true
