[package]
name = "blahctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
humantime = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.34", features = ["rusqlite-macros"] }
serde_jcs = "0.1.0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

blah-types = { path = "../blah-types", features = ["rusqlite"] }

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
