[package]
name = "blahd"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
http-body-util = "0.1"
humantime = "2"
parking_lot = "0.12" # Maybe no better performance, just that we hate poisoning. ¯\_(ツ)_/¯
rand = "0.8"
reqwest = "0.12"
rusqlite = { version = "0.32", features = ["rusqlite-macros"] }
rustix = { version = "0.38", features = ["net"] }
sd-notify = "0.4"
serde = { version = "1", features = ["derive"] }
serde-constant = "0.1"
serde-inline-default = "0.2"
serde_jcs = "0.1"
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }

blah-types = { path = "../blah-types", features = ["rusqlite"] }

[dev-dependencies]
expect-test = "1"
nix = { version = "0.29", features = ["fs", "process", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
rstest = { version = "0.22", default-features = false }
scopeguard = "1"
tempfile = "3"
tokio-tungstenite = "0.24"

[lints]
workspace = true
