[package]
name = "blahd"
version = "0.0.0"
edition = "2024"

[features]
default = []

unsafe_use_mock_instant_for_testing = ["dep:mock_instant", "blah-types/unsafe_use_mock_instant_for_testing"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = "0.10"
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
ed25519-dalek = "2"
futures-util = "0.3"
html-escape = "0.2"
http-body-util = "0.1"
humantime = "2"
parking_lot = "0.12" # Maybe no better performance, just that we hate poisoning. ¯\_(ツ)_/¯
paste = "1.0.15"
rand = "0.8"
reqwest = "0.12"
rusqlite = { version = "0.34", features = ["rusqlite-macros"] }
rustix = { version = "1", features = ["net"] }
sd-notify = "0.4"
serde = { version = "1", features = ["derive"] }
serde-constant = "0.1"
serde-inline-default = "0.2"
serde_jcs = "0.1"
serde_json = { version = "1", features = ["raw_value"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }

blah-types = { path = "../blah-types", features = ["rusqlite"] }

[dependencies.mock_instant]
version = "0.5"
optional = true

[build-dependencies]
url = "2"

[dev-dependencies]
expect-test = "1"
nix = { version = "0.29", features = ["fs", "process", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
rstest = { version = "0.24", default-features = false }
scopeguard = "1"
tempfile = "3"
tokio-tungstenite = "0.26"

[lints]
workspace = true
